--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  position: absolute
+  position: absolute;
 }
 
 .person video {
