adjust person style

--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 .person {
-  width: 200px;
-  height: 200px;
+  width: 128px;
+  height: 128px;
   overflow: hidden;
-  border-radius: 100px;
+  border-radius: 100%;
   display: flex;
   align-content: center;
   justify-content: center;
   position: absolute;
-  box-shadow: 0 0 0 0rem rgba(0,0,0, 0.1),
-              0 0 0 0rem rgba(0,0,0, 0.1),
-              0 0 0 0rem rgba(0,0,0, 0.1);
+  box-shadow: none;
   transition: box-shadow 0.5s ease-in;
   z-index: 9;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 
 .person.speaking {
-  box-shadow: 0 0 0 0.5rem rgba(0,0,0, 0.2),
-              0 0 0 1rem rgba(0,0,0, 0.2),
-              0 0 0 2rem rgba(0,0,0, 0.2);
+  box-shadow: 0 0 0 1.5rem rgba(0,0,0, 0.1),
+              0 0 0 3.5rem rgba(0,0,0, 0.1),
+              0 0 0 6rem rgba(0,0,0, 0.1);
 }
