--- a/style.css
+++ b/style.css
@@ -12,3 +12,13 @@
 .person video {
   object-fit: cover;
 }
+
+.decor {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  position: absolute
+}
