--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   border: 3px solid black;
   width: 2000px;
   height: 2000px;
+  background-image: url('images/1920x1200_13831_[www.ArtFile.ru].jpg');
+  background-repeat: no-repeat;
 }
 
 .person {
