--- a/style.css
+++ b/style.css
@@ -50,13 +50,15 @@ body {
   display: flex;
   align-content: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   box-shadow: none;
   transition: box-shadow 0.5s ease-in;
 }
 
 #context {
-  position: absolute;
+  position: fixed;
+  top: 10px;
+  left: 10px;
   visibility: hidden;
   width: 300px;
   height: 80vh;
