--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   height: 2000px;
   background-image: url('images/1920x1200_13831_[www.ArtFile.ru].jpg');
   background-repeat: no-repeat;
+
+  background: rgb(48, 49, 53);
 }
 
 .person {
@@ -51,27 +53,51 @@ body {
   align-content: center;
   justify-content: center;
   position: fixed;
+  top: 64px;
+  left: 12px;
   box-shadow: none;
   transition: box-shadow 0.5s ease-in;
 }
 
+#DecorAddButton {
+  position: fixed;
+}
+
 #context {
   position: fixed;
-  top: 10px;
-  left: 10px;
+  flex-direction: column;
+  top: 12px;
+  right: 12px;
   visibility: hidden;
   width: 300px;
   height: 80vh;
   display: flex;
   align-content: center;
   justify-content: center;
-  background: #858585;
+  background: rgb(34, 35, 37);
+  color: white;
+}
+
+.contextEmotes {
+  position: relative;
+  flex-direction: column;
+  top: -12px;
+  left: 100px;
+  visibility: hidden;
+  width: 300px;
+  height: 80vh;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  background: #4c6e47;
+  color: white;
 }
 
 .btn {
   width: 200px;
   height: 36px;
   background-color: chocolate;
+  color: white;
 }
 
 .line {
