--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ body {
 
 #context {
   position: fixed;
-  flex-direction: column;
   top: 16px;
   right: 16px;
   visibility: hidden;
@@ -82,39 +81,48 @@ body {
 
 #menu {
   position: fixed;
+  display: flex;
   flex-direction: row;
   align-content: center;
   justify-content: center;
   bottom: 16px;
   left: 50vw;
   transform: translateX(-50%);
-  visibility: visible;
-  width: 600px;
-  height: 24px;
+  width: 320px;
   background: rgba(42, 45, 51, 0.2);
   backdrop-filter: blur(20px);
   color: white;
   z-index: 99;
-  border-radius: 48px;
-  padding: 24px;
+  border-radius: 12px;
+  padding: 4px;
   font-size: 18px;
   box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.5);
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
 
-.contextEmotes {
-  position: relative;
-  flex-direction: column;
-  top: -12px;
-  left: 100px;
-  visibility: hidden;
-  width: 260px;
-  height: 300px;
+#contextEmotes {
+  position: fixed;
   display: flex;
+  flex-direction: row;
   align-content: center;
-  justify-content: center;
-  background: #4c6e47;
+  justify-content: space-evenly;
+  transform: translateX(-50%);
+  width: 200px;
+  background: rgba(42, 45, 51, 0.2);
+  backdrop-filter: blur(20px);
   color: white;
+  z-index: 99;
+  border-radius: 12px;
+  padding: 8px;
+  font-size: 18px;
+  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.emote {
+  width: 2rem;
+  height: 2rem;
+  min-height: 2rem;
 }
 
 .btn {
@@ -127,6 +135,19 @@ body {
   border-radius: 8px;
   padding: 8px;
   margin: 20px 0px 24px 0px;
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.3);
+}
+
+.btn.controls {
+  width: 140px;
+  height: 38px;
+  background-color: #ff5722;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  padding: 8px;
+  margin: 8px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.3);
 }
 
