--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
   align-items: center;
   align-content: center;
   padding: 10px;
-  z-index: 10;
+  z-index: 11;
   background: rgba(42, 45, 51, 0.5);
   backdrop-filter: blur(20px);
 }
@@ -113,12 +113,13 @@ body {
 }
 
 #contextEmotes {
+  visibility: hidden;
   position: fixed;
   display: flex;
   flex-direction: row;
   align-content: center;
   justify-content: space-evenly;
-  transform: translateX(-50%);
+  transform: translateX(-20%);
   width: 200px;
   background: rgba(42, 45, 51, 0.2);
   backdrop-filter: blur(20px);
@@ -135,6 +136,14 @@ body {
   width: 2rem;
   height: 2rem;
   min-height: 2rem;
+}
+
+.emote.float {
+  width: 3rem;
+  height: 3rem;
+  min-height: 3rem;
+  visibility: hidden;
+  position: fixed;
 }
 
 .btn {
