--- a/style.css
+++ b/style.css
@@ -46,17 +46,17 @@ body {
 
 #decorations {
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
+  top: 12px;
+  left: 12px;
   display: flex;
   flex-flow: column;
   align-items: center;
   align-content: center;
-  padding: 10px;
+  padding: 24px;
   z-index: 11;
   background: rgba(42, 45, 51, 0.5);
   backdrop-filter: blur(20px);
+  border-radius: 12px;
 }
 
 .decor > img {
