--- a/style.css
+++ b/style.css
@@ -142,8 +142,11 @@ body {
   width: 3rem;
   height: 3rem;
   min-height: 3rem;
-  visibility: hidden;
   position: fixed;
+  z-index: 11;
+  opacity: 0;
+  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.5);
+  transition: opacity 0.5s ease-in;
 }
 
 .btn {
