--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
   position: fixed;
   z-index: 11;
   opacity: 0;
-  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.5);
+  filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.5));
   transition: opacity 0.5s ease-in;
 }
 
