--- a/style.css
+++ b/style.css
@@ -65,11 +65,13 @@ body {
 .decor > img {
   max-width: 128px;
   max-height: 128px;
+  filter: drop-shadow(0px 2px 16px rgba(0, 0, 0, 0.3));
 }
 
 
 .placed-decor {
   position: absolute;
+  filter: drop-shadow(8px 12px 6px rgb(0,0,0, 0.5));
 }
 
 #DecorAddButton {
